<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.11">
  <POU Name="FB_AnalogDeviceRampControl" Id="{901ef948-d319-4e50-9c34-c06b07342954}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_AnalogDeviceRampControl
VAR
	i : UINT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[FOR i:=1 TO GVL_IO.NumFlowController DO
	IF GVL_IO.aMaxValueController[i] <> 0 THEN
		GVL_IO.aAnalogOutputIO[i] := LREAL_TO_INT(GVL_IO.aController[i].rControlValue); //Write to Device
		GVL_IO.aController_CV[i] := LREAL_TO_REAL((GVL_IO.aController[i].rControlValue / GVL_IO.KL3464MaxValueH)*GVL_IO.aMaxValueController[i]);
		GVL_IO.aController[i]();
	END_IF
END_FOR

IF ( GVL_IO.aController_CV[27] > 10 ) THEN
	GVL_IO.aDigitalOutputIO[2].0 := TRUE;
ELSE
	GVL_IO.aDigitalOutputIO[2].0 := FALSE;
END_IF

GVL_IO.wE3508_CV := LREAL_TO_WORD(GVL_IO.aController[27].rControlValue); //Write to Temperature Controller
GVL_IO.aController_CV[27] := WORD_TO_REAL(GVL_IO.wE3508_CV);
GVL_IO.aController[27]();
				
GVL_IO.wIqPlus_CV := LREAL_TO_WORD(GVL_IO.aController[28].rControlValue); //Write to Pressure Controller
GVL_IO.aController_CV[28] := WORD_TO_REAL(GVL_IO.wIqPlus_CV);
GVL_IO.aController[28]();

GVL_IO.rRotation_ControlValue := LREAL_TO_REAL(GVL_IO.aController[29].rControlValue); //Write to Rotation Controller (rpm)
GVL_IO.aController_CV[29] := GVL_IO.rRotation_ControlValue;
GVL_IO.aController[29]();	]]></ST>
    </Implementation>
    <LineIds Name="FB_AnalogDeviceRampControl">
      <LineId Id="1" Count="1" />
      <LineId Id="5" Count="9" />
      <LineId Id="39" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="20" Count="3" />
      <LineId Id="26" Count="3" />
      <LineId Id="32" Count="1" />
    </LineIds>
  </POU>
</TcPlcObject>