<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.12">
  <POU Name="P15_RotationOperation" Id="{7f828812-d1bb-49a4-a03d-f3e347855c39}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P15_RotationOperation
VAR
	rControlValue			: REAL; //rpm
	bStart_Stop				: BOOL := TRUE;
	bAlarmReset				: BOOL; //Motor Driver Alarm

	bRotationCP				: BOOL;
	nConvertedRotation_PV	: INT; //PV 0~100 rpm

	rConvertedCV			:REAL;
	(* Motor Driver *)
	bBrake_Run				: BOOL;
	(* Rotation Operation Parameter*)
	wRotaion_PV				: WORD;
	isRotationFault			: BOOL; //Motor Driver
END_VAR

VAR CONSTANT
	KL4404MaxValueP		: REAL := 13106; //0~4V, 0~2500RPM, BLHM230K-GFS
	//Motor Max Rotation RPM 2,500rpm, Gear Ratio 15, Belt Ratio 1.5
	ConversionFactor 	: REAL :=117.9585; //KL4404MaxValueP*15*1.5/2500
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Oriental Motor Driver : BLHM230K-GFS, 0~4V

(* Read from Power Distribution Pannel *)
bRotationCP := GVL_IO.aDigitalInputIO[5].3;

//from Device Value
isRotationFault := NOT(GVL_IO.aDigitalInputIO[2].5);
wRotaion_PV := UINT_TO_WORD(GVL_IO.aAnalogInputIO2[1]);
nConvertedRotation_PV := REAL_TO_INT(wRotaion_PV/(5*ConversionFactor));

// Interface with other PRGs
GVL_IO.nRotation_Converted_PV := nConvertedRotation_PV;
rControlValue := GVL_IO.rRotation_ControlValue;

//Write to Motor Driver
rConvertedCV := rControlValue * ConversionFactor; // Convert from RPM to control value

IF (GVL_IO.aController_TV[29] > 0) OR (wRotaion_PV > 0) THEN // Motor Driver RUN
	bBrake_Run := TRUE;
ELSIF (GVL_IO.aController_TV[29] = 0) AND (wRotaion_PV = 0) THEN
	bBrake_Run := FALSE;
END_IF

GVL_IO.aDigitalOutputIO[3].5 	:= bBrake_Run;
GVL_IO.aAnalogOutputIO[28] 		:= REAL_TO_INT(rConvertedCV);
GVL_IO.aInputState[1].11		:= isRotationFault;]]></ST>
    </Implementation>
    <LineIds Name="P15_RotationOperation">
      <LineId Id="44" Count="0" />
      <LineId Id="142" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="140" Count="0" />
      <LineId Id="170" Count="0" />
      <LineId Id="46" Count="1" />
      <LineId Id="49" Count="1" />
      <LineId Id="159" Count="2" />
      <LineId Id="144" Count="0" />
      <LineId Id="162" Count="0" />
      <LineId Id="52" Count="1" />
      <LineId Id="158" Count="0" />
      <LineId Id="148" Count="1" />
      <LineId Id="151" Count="1" />
      <LineId Id="154" Count="0" />
      <LineId Id="95" Count="0" />
      <LineId Id="98" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="163" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>