<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.8">
  <POU Name="P30_ManualControl" Id="{98ee4f4f-99e9-426e-9dfa-55ddf51d552b}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P30_ManualControl
VAR
	i 	: INT;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* Read from Device*)
FOR i:=1 TO 26 DO
	IF GVL_IO.aMaxValueController[i] <> 0 THEN
		GVL_IO.aGasController[i].nState := 1;
		GVL_IO.aGasController[i].nRampTime := GVL_IO.aController_RampTime[i];
		GVL_IO.aGasController[i].rTargetValue := GVL_IO.aController_TV[i] / GVL_IO.aMaxValueController[i] * GVL_IO.KL3464MaxValueH; //Input Set Value
		GVL_IO.aAnalogOutputIO[i] := LREAL_TO_INT(GVL_IO.aGasController[i].rControlValue); //Write to Device
		
		GVL_IO.aController_PV[i] := REAL_TO_INT(GVL_IO.aAnalogInputIO[i] / GVL_IO.KL3464MaxValueH * GVL_IO.aMaxValueController[i]);
		GVL_IO.aController_SV[i] := LREAL_TO_INT((GVL_IO.aGasController[i].rControlValue / GVL_IO.KL3464MaxValueH)*GVL_IO.aMaxValueController[i]);
		GVL_IO.aGasController[i]();
	END_IF
END_FOR]]></ST>
    </Implementation>
    <LineIds Name="P30_ManualControl">
      <LineId Id="1" Count="12" />
    </LineIds>
  </POU>
</TcPlcObject>